Suodatinten muokkausnäkymän rivin lisäys
